# code-challenge

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
tests/: test_cli_utility.py
wallpaper_downloader/: cli.py  downloader.py  logger.py
wallpaper_downloader/scripts/: getwallpapers.py
