[tool.poetry]
name = "code-challenge"
version = "0.1.0"
description = ""
authors = ["ajib6ept <asalbert@narod.ru>"]
packages = [
    { include = "wallpaper_downloader" },
]


[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
click = "^8.1.3"
lxml = "^4.9.1"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}
pytest = "^7.1.2"
flake8 = "^4.0.1"
pytest-mock = "^3.8.2"
mypy = "^0.971"
types-requests = "^2.28.3"
lxml-stubs = "^0.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
getwallpapers = "wallpaper_downloader.scripts.getwallpapers:main"
